
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2024 JUL 15a
  * in model/chem/_NH3_Plasma_32s/rodriguez2024.c
    - fixed a few bugs
    - made H2v production active independently of the chemical solver chosen
    

2024 JUN 28a
  * in model/fluid/_*_plasma/fluid_source.c
    - in find_dSe_dU_transport_Parent2024(), changed the linearization of the inelastic
      collision term
  

2024 JUN 27b
  * in README
    - updated the description of CFDWARP
  * in various .tex files
    - changed BParent's affiliation to current one at UArizona
  * in lib/latex/warpdoc.cls
    - changed BParent's affiliation to current one at UArizona


2024 JUN 27a
  * in model/chem/_NH3_Plasma_32s/chem.c
    - added H- ionization model BACAL2
  * in model/chem/_NH3_Plasma_32s/rodriguez2024.c
    - added BACAL2 option


2024 JUN 26a
  * in bin/Broslawski.wrp
    - made small changes affecting rates of convergence
  * in model/fluid/_Navier-Stokes_plasma/fluid.c
    - in _relaxTe_effective(), now makes the relaxation factor function of flow properties 
  * in model/fluid/_Favre-Reynolds_plasma/fluid.c
    - added _relaxTe_effective()
    - in add_dUstar_to_U(), added call to _relaxTe_effective()
  * in src/common.h
    - added REFORMAT_INITVAR_SPECIES_SUM_CHECK in gl_t
  * in src/data.c
    - in read_data_file_interpolation(), sets gl->REFORMAT_INITVAR_SPECIES_SUM_CHECK to FALSE
      before calling init_node_fluid()
  * in src/init.c
    - in reformat_initvar_species_fractions(), do not output an error message if the sum of the
      mass fractions is not within 0.1% of 1 should gl->REFORMAT_INITVAR_SPECIES_SUM_CHECK=FALSE
  * in src/main.c
    - at beginning of main() initializes gl->REFORMAT_INITVAR_SPECIES_SUM_CHECK=TRUE
    

2024 JUN 24b